@@ -1,7 +1,10 @@
-#include <stdlib.h>
-#include "../utest/utest.h"
-#include <libnr/nr-point-fns.h>
+#include <cassert>
 #include <cmath>
+#include <glib/gmacros.h>
+#include <stdlib.h>
+
+#include "utest/utest.h"
+#include "libnr/nr-point-fns.h"
 
 using NR::Point;
 
@@ -12,15 +15,22 @@ int main(int argc, char *argv[])
     Point const p3n4(3.0, -4.0);
     Point const p0(0.0, 0.0);
     double const small = pow(2.0, -1070);
+    double const inf = 1e400;
+    double const nan = inf - inf;
 
     Point const small_left(-small, 0.0);
     Point const small_n3_4(-3.0 * small, 4.0 * small);
+    Point const part_nan(3., nan);
+
+    assert(isnan(nan));
+    assert(!isnan(small));
 
     UTEST_TEST("L1") {
         UTEST_ASSERT( NR::L1(p0) == 0.0 );
         UTEST_ASSERT( NR::L1(p3n4) == 7.0 );
         UTEST_ASSERT( NR::L1(small_left) == small );
         UTEST_ASSERT( NR::L1(small_n3_4) == 7.0 * small );
+        UTEST_ASSERT(isnan(NR::L1(part_nan)));
     }
 
     UTEST_TEST("L2") {
@@ -28,6 +38,7 @@ int main(int argc, char *argv[])
         UTEST_ASSERT( NR::L2(p3n4) == 5.0 );
         UTEST_ASSERT( NR::L2(small_left) == small );
         UTEST_ASSERT( NR::L2(small_n3_4) == 5.0 * small );
+        UTEST_ASSERT(isnan(NR::L1(part_nan)));
     }
 
     UTEST_TEST("LInfty") {
@@ -35,6 +46,7 @@ int main(int argc, char *argv[])
         UTEST_ASSERT( NR::LInfty(p3n4) == 4.0 );
         UTEST_ASSERT( NR::LInfty(small_left) == small );
         UTEST_ASSERT( NR::LInfty(small_n3_4) == 4.0 * small );
+        UTEST_ASSERT(isnan(NR::L1(part_nan)));
     }
 
     UTEST_TEST("atan2") {
@@ -58,9 +70,9 @@ int main(int argc, char *argv[])
   Local Variables:
   mode:c++
   c-file-style:"stroustrup"
-  c-file-offsets:((innamespace . 0)(inline-open . 0))
+  c-file-offsets:((innamespace . 0)(inline-open . 0)(case-label . +))
   indent-tabs-mode:nil
   fill-column:99
   End:
 */
-// vim: filetype=c++:expandtab:shiftwidth=4:tabstop=8:softtabstop=4 :
+// vim: filetype=cpp:expandtab:shiftwidth=4:tabstop=8:softtabstop=4:encoding=utf-8:textwidth=99 :
